--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,9 +7,8 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-    <style>
-        body{background-image:url("{{ asset('bg.jpg') }}");background-repeat: no-repeat; background-size: cover }
-        h1{text-align: center;}
+    <style>body{background-image:url("{{ asset('bg.jpg') }}");background-repeat: no-repeat; background-size: cover }
+        h1{background-image:url("{{ asset('IKouq_logo.png') }}");width: 150px;height: 100px;background-size: cover}
         form, table {width:80%;padding: 30px;border: 1px solid #ff9802;border-radius: 15px; background: rgba(255, 250, 255, 0.6);box-shadow: 0 0 20px 0 rgba(159, 86, 2, 0.66), 0 5px 5px 0 rgba(0, 0, 0, 0.24);margin: 5%}
         .container h1{width: 38%;margin: 0 auto;padding-bottom: 10px;}
         tr{padding: 30px;border: 1px solid #ff9802;border-radius: 15px; box-shadow: 0 0 20px 0 rgba(159, 86, 2, 0.66), 0 5px 5px 0 rgba(0, 0, 0, 0.24);text-align: center}
@@ -17,7 +16,7 @@
         input[type=text], input[type=password] {width: 100%;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;}
         /* Set a style for all buttons */
         input[type=submit] {background-color: #FF9802;color: #191919;padding: 14px 20px;margin: 8px 0;border: none;cursor: pointer;width: 100%;}
-        input[type=submit]:hover {background-color: rgba(255, 152, 2, 0.62);color: #191919;border: 1px solid #ff9802;}
+        input[type=submit]:hover {background-color: rgba(255, 152, 2, 0.62);color: #191919;border: 1px solid #ff881a;}
         a{border: 1px solid #ff9802; background: rgba(255, 250, 255, 0.4);box-shadow: 0 0 20px 0 rgba(159, 86, 2, 0.66), 0 5px 5px 0 rgba(0, 0, 0, 0.24)}
     </style>
         {% block body %}{% endblock %}
