mise en forme admin
Signed-off-by: juilleratn <juilleratnoel@gmail.com>

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,9 +7,11 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+    <header></header>
     <style>body{background-image:url("{{ asset('bg.jpg') }}");background-repeat: no-repeat; background-size: cover }
-        h1{background-image:url("{{ asset('IKouq_logo.png') }}");width: 150px;height: 100px;background-size: cover}
-        form, table {width:80%;padding: 30px;border: 1px solid #ff9802;border-radius: 15px; background: rgba(255, 250, 255, 0.6);box-shadow: 0 0 20px 0 rgba(159, 86, 2, 0.66), 0 5px 5px 0 rgba(0, 0, 0, 0.24);margin: 5%}
+        header{background-image:url("{{ asset('IKouq_logo.png') }}");width: 150px;height: 100px;background-size: cover;border: 1px solid #ff9802;border-radius: 15px;}
+        h1{text-align: center}
+        form, table, h1 {width:80%;padding: 30px;border: 1px solid #ff9802;border-radius: 15px; background: rgba(255, 250, 255, 0.6);box-shadow: 0 0 20px 0 rgba(159, 86, 2, 0.66), 0 5px 5px 0 rgba(0, 0, 0, 0.24);margin: 5%}
         .container h1{width: 38%;margin: 0 auto;padding-bottom: 10px;}
         tr{padding: 30px;border: 1px solid #ff9802;border-radius: 15px; box-shadow: 0 0 20px 0 rgba(159, 86, 2, 0.66), 0 5px 5px 0 rgba(0, 0, 0, 0.24);text-align: center}
         /* Full-width inputs */
