--- a/app/Resources/views/recette/index.html.twig
+++ b/app/Resources/views/recette/index.html.twig
@@ -10,32 +10,28 @@
     <table>
         <thead>
             <tr>
-                <th>Id</th>
+
                 <th>Nom</th>
-                <th>Part</th>
+                <th></th>
+                <th>Pour</th>
                 <th>Duree</th>
-                <th>Urlphoto</th>
-                <th>Thermostat</th>
-                <th>Tempscuisson</th>
                 <th>Regime</th>
                 <th>Plat</th>
-                <th>Instruction</th>
+
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for recette in recettes %}
             <tr>
-                <td><a href="{{ path('recette_show', { 'id': recette.id }) }}">{{ recette.id }}</a></td>
-                <td>{{ recette.nom }}</td>
-                <td>{{ recette.part }}</td>
-                <td>{{ recette.duree }}</td>
-                <td>{{ recette.urlPhoto }}</td>
-                <td>{{ recette.thermostat }}</td>
-                <td>{{ recette.tempsCuisson }}</td>
+
+                <td><a href="{{ path('recette_recipe', { 'nom': recette.nom }) }}">{{ recette.nom }}</a></td>
+                <td><img style="width:75px; height:75px;" src="/image/{{ recette.urlPhoto }}"></td>
+                <td>{{ recette.part }} pers.</td>
+                <td>{{ recette.duree }} min</td>
                 <td>{{ recette.regime }}</td>
                 <td>{{ recette.plat }}</td>
-                <td>{{ recette.instruction }}</td>
+
                 <td>
                     <ul>
                         <li>
