--- a/web/css/recipe.css
+++ b/web/css/recipe.css
@@ -1,16 +1,21 @@
 .container{
     display: flex;
 }
-.hero{
-
-}
 .photo{
-    width: 300px;
-    height: 300px;
+}
+.info{
+    text-align: center;
 
 }
-.info{}
-.topbar{}
+.topbar{
+    height: 20px;
+}
+.regime{
+    display: flex;
+}
+li{
+    list-style: none;
+}
 .part{}
 .hero{
     display: flex;
