--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,9 +15,15 @@
         body{background-image:url("{{ asset('/image/bg.jpg') }}");}
         header{background-image:url("{{ asset('/image/IKouq_logo.png') }}");}
          </style>
+    {% block javascripts %}
+        <script
+                src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+                integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+                crossorigin="anonymous">
+        </script>
+
+    {% endblock %}
         {% block body %}{% endblock %}
-        {% block javascripts %}
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        {% endblock %}
+
     </body>
 </html>
