--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,6 +6,7 @@
         {% block stylesheets %}
             <link href="{{ asset('/css/base.css') }}" rel="stylesheet"/>
             <link href="{{ asset('/css/recipe.css') }}" rel="stylesheet"/>
+            <link href="{{ asset('/css/onglet.css') }}" rel="stylesheet"/>
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
