--- a/web/css/base.css
+++ b/web/css/base.css
@@ -15,7 +15,7 @@ header{
 h1{
     text-align: center;
 }
-form, table, h1, .part, .instruction, .colonne_droite, .topbar {
+form,  h1, .part, .instruction, .colonne_droite, .topbar {
     width:80%;
     padding: 30px;
     border: 1px solid #ff9802;
