--- a/app/Resources/views/recette/index.html.twig
+++ b/app/Resources/views/recette/index.html.twig
@@ -1,15 +1,16 @@
 {% extends 'base.html.twig' %}
 {% block title %}Recette{% endblock %}
 {% block body %}
-    <h1>Recettes list</h1>
+    <h1>Les Recettes</h1>
+
+
     <script>
             $(function() {
-                $('#onglets').css('display', 'block');
-                $('#onglets').click(function(event)
+                $('#ongletsPlat').css('display', 'block');
+                $('#ongletsPlat').click(function(event)
                 {
                     var actuel = event.target;
                     if (!/li/i.test(actuel.nodeName) || actuel.className.indexOf('actif') > -1) {
-                        alert(actuel.nodeName);
                         return;
                     }
                     $(actuel).addClass('actif').siblings().removeClass('actif');
@@ -17,7 +18,7 @@
                 });
                 function setDisplay() {
                     var modeAffichage;
-                    $('#onglets li').each(function(rang)
+                    $('#ongletsPlat li').each(function(rang)
                     {
                         modeAffichage = $(this).hasClass('actif') ? '' : 'none';
                         $('.item').eq(rang).css('display', modeAffichage);
@@ -25,28 +26,55 @@
                 }
                 setDisplay();
             });
+
+            // $(function() {
+            //     $('#ongletsRegime').css('display', 'block');
+            //     $('#ongletsRegime').click(function(event)
+            //     {
+            //         var actuel = event.target;
+            //         if (!/li/i.test(actuel.nodeName) || actuel.className.indexOf('actif') > -1) {
+            //             return;
+            //         }
+            //         $(actuel).addClass('actif').siblings().removeClass('actif');
+            //         setDisplay();
+            //     });
+            //     function setDisplay() {
+            //         var modeAffichage;
+            //         $('#ongletsRegime li').each(function(rang)
+            //         {
+            //             modeAffichage = $(this).hasClass('actif') ? '' : 'none';
+            //             $('.item').eq(rang).css('display', modeAffichage);
+            //         });
+            //     }
+            //     setDisplay();
+            // });
         </script>
+
+
     </head>
     <body>
 
-    <ul id="onglets">
+    <ul id="ongletsPlat">
         <li class="actif">Entrée</li>
         <li>Plat principal</li>
         <li>Dessert</li>
     </ul>
     <div id="contenu">
         <div class="item">
-            <h2>Entrée</h2>
             <table>
-                {% for recette in recettes | sort %}
-                    {% if (recette.plat =='Entrée') %}
-                        
+{#            <ul id="ongletsRegime">#}
+{#                <li class="actif">Normal</li>#}
+{#                <li>Végétarien</li>#}
+{#                <li>Végan</li>#}
+{#            </ul>#}
+            {% for recette in recettes | sort %}
+                {% if (recette.plat =='Entrée') %}
                     <tr>
                         <td><a href='{{ path('recette_recipe', { 'nom': recette.nom }) }}'>{{ recette.nom }}</a></td>
-                        <td><img style='width:75px; height:75px;' src='/image/{{ recette.urlPhoto }}'></td>
+                        <td><img style='width:100px; height:100px;' src='/image/{{ recette.urlPhoto }}'></td>
                         <td>{{ recette.part }} pers.</td>
                         <td>{{ recette.duree }} min</td>
-                        <td>{{ recette.regime  }}</td>
+                        {#_______________visible par l'admin________________#}
                         <td>
                             <ul>
                                 <li>
@@ -57,75 +85,69 @@
                                 </li>
                             </ul>
                         </td>
-                    </tr>
-                    {% endif %}
-                {% endfor %}
-            </table>
-
-        </div>
-        <div class="item">
-            <h2>Plat principal</h2>
-            <p>
-
-            </p>
-            <table>
-                {% for recette in recettes %}
-                    {% if (recette.plat =='Plat principal') %}
-                    <tr>
-                        <td><a href="{{ path('recette_recipe', { 'nom': recette.nom }) }}">{{ recette.nom }}</a></td>
-                        <td><img style="width:75px; height:75px;" src="/image/{{ recette.urlPhoto }}"></td>
-                        <td>{{ recette.part }} pers.</td>
-                        <td>{{ recette.duree }} min</td>
-                        <td>{{ recette.regime }}</td>
-                        <td>{{ recette.plat ('Plat principal') }}</td>
-                        <td>
-                            <ul>
-                                <li>
-                                    <a href="{{ path('recette_show', { 'id': recette.id }) }}">show</a>
-                                </li>
-                                <li>
-                                    <a href="{{ path('recette_edit', { 'id': recette.id }) }}">edit</a>
-                                </li>
-                            </ul>
-                        </td>
+                        {#___________________________________________________#}
                     </tr>
                     {% endif %}
                 {% endfor %}
             </table>
         </div>
         <div class="item">
-            <h2>Dessert</h2>
             <table>
-                {% for recette in recettes %}
-                    {% if (recette.plat =='Dessert') %}
+            {% for recette in recettes %}
+                {% if (recette.plat =='Plat principal') %}
                     <tr>
-                        <td><a href="{{ path('recette_recipe', { 'nom': recette.nom }) }}">{{ recette.nom }}</a></td>
-                        <td><img style="width:75px; height:75px;" src="/image/{{ recette.urlPhoto }}"></td>
+                        <td><a href='{{ path('recette_recipe', { 'nom': recette.nom }) }}'>{{ recette.nom }}</a></td>
+                        <td><img style='width:100px; height:100px;' src='/image/{{ recette.urlPhoto }}'></td>
                         <td>{{ recette.part }} pers.</td>
                         <td>{{ recette.duree }} min</td>
-                        <td>{{ recette.regime }}</td>
-                        <td>{{ recette.plat ('Dessert') }}</td>
+                        {#_______________visible par l'admin________________#}
                         <td>
                             <ul>
                                 <li>
-                                    <a href="{{ path('recette_show', { 'id': recette.id }) }}">show</a>
+                                    <a href='{{ path('recette_show', { 'id': recette.id }) }}'>show</a>
                                 </li>
                                 <li>
-                                    <a href="{{ path('recette_edit', { 'id': recette.id }) }}">edit</a>
+                                    <a href='{{ path('recette_edit', { 'id': recette.id }) }}'>edit</a>
                                 </li>
                             </ul>
                         </td>
+                        {#___________________________________________________#}
                     </tr>
                     {% endif %}
                 {% endfor %}
+            </table>
+        </div>
+        <div class="item">
+            <table>
+            {% for recette in recettes %}
+                {% if (recette.plat =='Dessert') %}
+                    <tr>
+                        <td><a href='{{ path('recette_recipe', { 'nom': recette.nom }) }}'>{{ recette.nom }}</a></td>
+                        <td><img style='width:100px; height:100px;' src='/image/{{ recette.urlPhoto }}'></td>
+                        <td>{{ recette.part }} pers.</td>
+                        <td>{{ recette.duree }} min</td>
+                        {#_______________visible par l'admin________________#}
+                        <td>
+                            <ul>
+                                <li>
+                                    <a href='{{ path('recette_show', { 'id': recette.id }) }}'>show</a>
+                                </li>
+                                <li>
+                                    <a href='{{ path('recette_edit', { 'id': recette.id }) }}'>edit</a>
+                                </li>
+                            </ul>
+                        </td>
+                        {#___________________________________________________#}
+                    </tr>
+                {% endif %}
+            {% endfor %}
             </table>
         </div>
     </div>
     </body>
     </html>
-    <ul>
-        <li>
-            <a href="{{ path('recette_new') }}">Create a new recette</a>
-        </li>
-    </ul>
+    <div class="adminRecette">
+        <a href="{{ path('recette_new') }}">Create a new recette</a>
+    </div>
+
 {% endblock %}
