--- a/app/Resources/views/recette/recipe.html.twig
+++ b/app/Resources/views/recette/recipe.html.twig
@@ -12,9 +12,9 @@
         </div>
             <div class="info">
                 <div class="topbar">
-                    <ul class="regime">
+                    <ul class="platRegime">
                         <li>{{ recette.plat }} /</li>
-                        <li>{{ recette.regime }}</li>
+                        <li>{{ recette.regime }}(icone)</li>
                     </ul>
                 </div>
                 <div class="part">
@@ -26,9 +26,9 @@
                         <div id="nbPart">{{ recette.part }}</div>
                     </div>
                     <div class="plus">
-                        <input type="button" id="plus" value="+" onclick="ajouter()"/> personnes
+                        <input type="button" id="plus" value="+" onclick="ajouter()"/> personnes (icone)
                     </div>
-                    <div>{{ recette.duree }} minutes</div>
+                    <div>{{ recette.duree }} minutes(icone duree)</div>
                     </div>
                 </div>
     </div>
@@ -40,22 +40,28 @@
                     <thead>
                     <tr>
                         <th>Photo</th>
-                        <th>quantité</th>
-                        <th>mesure</th>
-                        <th>ingredient</th>
-                        <th>Nutri-score</th>
+                        <th>quantité/ingredient</th>
                         <th>allergene</th>
+                        <th>Nutri-score</th>
                     </tr>
                     </thead>
                     <tbody>
                     {% for nom, value in quantitesIngredients %}
                         <tr>
                             <td><img style="width:75px; height:75px;border-radius: 15px" src="/image/{{ value.objet.urlPhoto }}"></td>
-                            <td class="quantite" id="quant{{ loop.index - 1 }}" data-ing="{{ value.quantite }}">{{ value.quantite }}</td>
-                            <td>{{ value.objet.mesure }}</td>
-                            <td>{{ nom }} </td>
-                            <td>{{ value.objet.nutriScore }}</td>
-                            <td>{{ value.objet.allergene }}</td>
+                            <td class="quantite" id="quant{{ loop.index - 1 }}" data-ing="{{ value.quantite }}">{{ value.quantite }} {{ value.objet.mesure }} de {{ nom }} </td>
+                            <td>{% if (value.objet.allergene  == 'none') == false %}
+                                {{ value.objet.allergene }}
+                                {% endif %}</td>
+                            <td>{% if (value.objet.nutriScore == '1') %}<img style="width:75px; height:75px;border-radius: 15px" src="{{ asset('nutri.jpg') }}")>A{% endif %}
+                                {% if (value.objet.nutriScore == '2') %}<img style="width:75px; height:75px;border-radius: 15px" src="/web/nutri.jpg">B{% endif %}
+                                {% if (value.objet.nutriScore == '3') %}<img style="width:75px; height:75px;border-radius: 15px" src="/web/nutri.jpg">C{% endif %}
+                                {% if (value.objet.nutriScore == '4') %}<img style="width:75px; height:75px;border-radius: 15px" src="/web/nutri.jpg">D{% endif %}
+                                {% if (value.objet.nutriScore == '5') %}<img style="width:75px; height:75px;border-radius: 15px" src="/web/nutri.jpg">E{% endif %}
+
+
+
+                            </td>
                         </tr>
                     {% endfor %}
 <script type="text/javascript">
