--- a/web/css/base.css
+++ b/web/css/base.css
@@ -1,24 +1,54 @@
+
+html{
+    background-color: #201413;
+    height: 100%;
+}
 body{
     background-image: url("/web/image/bg.jpg") ;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-color: #191919;
+    font-size: 16px;
+    width: 70%;
+    height: 100%;
+    margin-left: 15%;
+
+
+
 }
 header{
     background-image:url("/web/image/IKouq_logo.png");
-    width: 150px;height: 100px;
     background-size: cover;
-    border: 1px solid #ff9802;
+
+}
+.ikouq{
+    border: 2px solid #ff9802;
+    width: 35%;
+    max-width: 230px;
+    max-height: 130px;
+    height: 10%;
     border-radius: 15px;
+    display: flex;
+    margin-left: 2%;
+
+}
+.logo{
+    width: 150px;height: 100px;
+}
+.marque p {
+    font-size: 2.25em;
+
+    max-font-size: 36px;
+    padding-right: 5px;
 }
 h1{
     text-align: center;
 }
 form,  h1, .part, .instruction, .colonne_droite, .topbar {
-    width:80%;
+
     padding: 30px;
-    border: 1px solid #ff9802;
+    border: 2px solid #ff9802;
     border-radius: 15px;
     background: rgba(255, 250, 255, 0.6);
     box-shadow: 0 0 20px 0 rgba(159, 86, 2, 0.66), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
@@ -30,18 +60,20 @@ form,  h1, .part, .instruction, .colonne_droite, .topbar {
     padding-bottom: 10px;
 }
 tr{
-    padding: 30px;
-    border: 1px solid #ff9802;
+
+
+    border: 2px solid #ff9802;
     border-radius: 15px;
     box-shadow: 0 0 20px 0 rgba(159, 86, 2, 0.66), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     text-align: center;
+
 }
 /* Full-width inputs */
 input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     box-sizing: border-box;
 }
 /* Set a style for all buttons */
@@ -57,10 +89,10 @@ input[type=submit] {
 input[type=submit]:hover {
     background-color: rgba(255, 152, 2, 0.62);
     color: #191919;
-    border: 1px solid #ff881a;
+    border: 2px solid #ff881a;
 }
 a{
-    border: 1px solid #ff9802;
-    background: rgba(255, 250, 255, 0.4);
     box-shadow: 0 0 20px 0 rgba(159, 86, 2, 0.66), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    text-decoration: none;
+    color: #191919;
 }
