--- a/app/Resources/views/recette/recipe.html.twig
+++ b/app/Resources/views/recette/recipe.html.twig
@@ -53,11 +53,11 @@
                             <td>{% if (value.objet.allergene  == 'none') == false %}
                                 {{ value.objet.allergene }}
                                 {% endif %}</td>
-                            <td>{% if (value.objet.nutriScore == '1') %}<img style="width:75px; height:75px;border-radius: 15px" src="{{ asset('nutri.jpg') }}")>A{% endif %}
-                                {% if (value.objet.nutriScore == '2') %}<img style="width:75px; height:75px;border-radius: 15px" src="/web/nutri.jpg">B{% endif %}
-                                {% if (value.objet.nutriScore == '3') %}<img style="width:75px; height:75px;border-radius: 15px" src="/web/nutri.jpg">C{% endif %}
-                                {% if (value.objet.nutriScore == '4') %}<img style="width:75px; height:75px;border-radius: 15px" src="/web/nutri.jpg">D{% endif %}
-                                {% if (value.objet.nutriScore == '5') %}<img style="width:75px; height:75px;border-radius: 15px" src="/web/nutri.jpg">E{% endif %}
+                            <td>{% if (value.objet.nutriScore == '1') %}<img style="width:75px; height:75px;border-radius: 15px" src="{{ asset('NS_a.png') }}">A{% endif %}
+                                {% if (value.objet.nutriScore == '2') %}<img style="width:75px; height:75px;border-radius: 15px" src="NS_b.png">B{% endif %}
+                                {% if (value.objet.nutriScore == '3') %}<img style="width:75px; height:75px;border-radius: 15px" src="NS_c.png">C{% endif %}
+                                {% if (value.objet.nutriScore == '4') %}<img style="width:75px; height:75px;border-radius: 15px" src="/NS_d.png">D{% endif %}
+                                {% if (value.objet.nutriScore == '5') %}<img style="width:75px; height:75px;border-radius: 15px" src="/NS_e.png">E{% endif %}
 
 
 
